feature: contacts REST API
